[gd_scene load_steps=27 format=3 uid="uid://jvjm41yq7kb4"]

[ext_resource type="Texture2D" uid="uid://bltl5kradmh62" path="res://assets/objects/spritesheet.png" id="1_073ne"]
[ext_resource type="Script" path="res://entities/player/player.gd" id="1_r64ha"]
[ext_resource type="Texture2D" uid="uid://bw8p4bf3odcil" path="res://assets/objects/spritesheetblue.png" id="2_8xq2n"]
[ext_resource type="AudioStream" uid="uid://djku4auvtkm63" path="res://assets/audio/sfx/putdown.mp3" id="2_d5wux"]
[ext_resource type="Texture2D" uid="uid://eskrrf2myssk" path="res://icon.svg" id="3_4arww"]
[ext_resource type="AudioStream" uid="uid://ystby1i51y4y" path="res://assets/audio/sfx/bombputdown.mp3" id="3_26vdk"]
[ext_resource type="AudioStream" uid="uid://r5vbugg7xhw7" path="res://assets/audio/sfx/getpowerup.mp3" id="4_e2y5e"]
[ext_resource type="Script" path="res://entities/player/player_controls.gd" id="4_ly5up"]

[sub_resource type="AtlasTexture" id="AtlasTexture_5x0qh"]
atlas = ExtResource("1_073ne")
region = Rect2(0, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_rekeb"]
atlas = ExtResource("1_073ne")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_aefr6"]
atlas = ExtResource("1_073ne")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_8k08l"]
atlas = ExtResource("1_073ne")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_if3gu"]
atlas = ExtResource("1_073ne")
region = Rect2(0, 200, 100, 100)

[sub_resource type="SpriteFrames" id="SpriteFrames_378bp"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5x0qh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5x0qh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5x0qh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5x0qh")
}],
"loop": true,
"name": &"hurt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rekeb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aefr6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8k08l")
}],
"loop": true,
"name": &"new_animation",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_if3gu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_if3gu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_if3gu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_if3gu")
}],
"loop": true,
"name": &"placedbomb",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_pl58f"]
atlas = ExtResource("2_8xq2n")
region = Rect2(0, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_tivpc"]
atlas = ExtResource("2_8xq2n")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_pvc5l"]
atlas = ExtResource("2_8xq2n")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_y7ar7"]
atlas = ExtResource("2_8xq2n")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_4osub"]
atlas = ExtResource("2_8xq2n")
region = Rect2(0, 200, 100, 100)

[sub_resource type="SpriteFrames" id="SpriteFrames_37rni"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pl58f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pl58f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pl58f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pl58f")
}],
"loop": true,
"name": &"hurt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tivpc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pvc5l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y7ar7")
}],
"loop": true,
"name": &"new_animation",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4osub")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4osub")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4osub")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4osub")
}],
"loop": true,
"name": &"placedbomb",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_etv2l"]
size = Vector2(25, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1rlih"]
size = Vector2(23, 14)

[sub_resource type="CircleShape2D" id="CircleShape2D_g76kl"]
radius = 15.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ew5ed"]
size = Vector2(27, 18)

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_ok7ab"]
properties/0/path = NodePath(".:synced_position")
properties/0/spawn = true
properties/0/replication_mode = 1

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_v6f77"]
properties/0/path = NodePath(".:motion")
properties/0/spawn = true
properties/0/replication_mode = 1

[node name="Player" type="CharacterBody2D" groups=["players"]]
y_sort_enabled = true
collision_layer = 33
collision_mask = 33
script = ExtResource("1_r64ha")

[node name="PutDownObstacleStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_d5wux")
volume_db = -20.0

[node name="PutDownBombStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_26vdk")
volume_db = -25.0

[node name="GetPowerUpStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_e2y5e")
volume_db = -25.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.64, 0.66)
sprite_frames = SubResource("SpriteFrames_378bp")
animation = &"new_animation"
autoplay = "new_animation"
speed_scale = 0.5
offset = Vector2(5, -30)

[node name="AnimatedSprite2D2" type="AnimatedSprite2D" parent="."]
visible = false
scale = Vector2(0.64, 0.66)
sprite_frames = SubResource("SpriteFrames_37rni")
animation = &"hurt"
autoplay = "new_animation"
offset = Vector2(5, -30)

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
position = Vector2(-9.53674e-07, -1)
scale = Vector2(0.160156, 0.171875)
texture = ExtResource("3_4arww")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 0)
shape = SubResource("RectangleShape2D_etv2l")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0.5, 0)
shape = SubResource("RectangleShape2D_1rlih")

[node name="PlayerCollisionArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerCollisionArea"]
position = Vector2(0, -7)
shape = SubResource("CircleShape2D_g76kl")
debug_color = Color(0.929412, 0.223529, 0.360784, 0.419608)

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="EnemyCollision" type="Area2D" parent="."]
collision_layer = 128
collision_mask = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyCollision"]
position = Vector2(0.5, 0)
shape = SubResource("RectangleShape2D_ew5ed")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_ok7ab")

[node name="Inputs" type="Node" parent="."]
script = ExtResource("4_ly5up")

[node name="InputSync" type="MultiplayerSynchronizer" parent="Inputs"]
replication_config = SubResource("SceneReplicationConfig_v6f77")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="area_entered" from="PlayerCollisionArea" to="." method="_on_player_collision_area_area_entered"]
[connection signal="area_exited" from="PlayerCollisionArea" to="." method="_on_player_collision_area_area_exited"]
[connection signal="body_entered" from="PlayerCollisionArea" to="." method="_on_player_collission_area_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="EnemyCollision" to="." method="_on_enemy_collision_body_entered"]
